# mcp-jenkins

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/mcp_jenkins/: __init__.py
src/mcp_jenkins/jenkins/: rest_client.py  rest_endpoint.py
src/mcp_jenkins/jenkins/model/: item.py
src/mcp_jenkins/server/: __init__.py  build.py  item.py  view.py
tests/: test_mcp_jenkins.py
tests/test_core/: test_middleware.py
tests/test_jenkins/: test_rest_client.py
tests/test_server/: test_build.py  test_item.py  test_queue.py  test_view.py
